Switch up URL structure

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -15,27 +15,27 @@
     <div class="dropdown-menu pre-scrollable" aria-labelledby="dropdownMenuLink">
       <h6 class="dropdown-header">Brooklyn</h6>
       {% for i in brooklyn_boards %}
-      <a class="dropdown-item" href="/brooklyn/{{i}}">Community Board {{i}}</a>
+      <a class="dropdown-item" href="/boards/brooklyn_{{i}}">Community Board {{i}}</a>
       {% endfor %}
 
       <h6 class="dropdown-header">Bronx</h6>
       {% for i in bronx_boards %}
-      <a class="dropdown-item" href="/bronx/{{i}}">Community Board {{i}}</a>
+      <a class="dropdown-item" href="/boards/bronx_{{i}}">Community Board {{i}}</a>
       {% endfor %}
 
       <h6 class="dropdown-header">Manhattan</h6>
       {% for i in manhattan_boards %}
-      <a class="dropdown-item" href="/manhattan/{{i}}">Community Board {{i}}</a>
+      <a class="dropdown-item" href="/boards/manhattan_{{i}}">Community Board {{i}}</a>
       {% endfor %}
 
       <h6 class="dropdown-header">Queens</h6>
       {% for i in queens_boards %}
-      <a class="dropdown-item" href="/queens/{{i}}">Community Board {{i}}</a>
+      <a class="dropdown-item" href="/boards/queens_{{i}}">Community Board {{i}}</a>
       {% endfor %}
 
       <h6 class="dropdown-header">Staten Island</h6>
       {% for i in staten_island_boards %}
-      <a class="dropdown-item" href="/staten_island/{{i}}">Community Board {{i}}</a>
+      <a class="dropdown-item" href="/boards/staten_island_{{i}}">Community Board {{i}}</a>
       {% endfor %}
     </div>
   </div>
