break out CB buttons

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -7,38 +7,20 @@
 <div class="container">
   <h1>Board Dash</h1>
 
-  <div class="btn-group dropdown">
-    <a class="btn btn-secondary btn-lg dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Select your community Board:
-    </a>
-
-    <div class="dropdown-menu pre-scrollable" aria-labelledby="dropdownMenuLink">
-      <h6 class="dropdown-header">Brooklyn</h6>
-      {% for i in brooklyn_boards %}
-      <a class="dropdown-item" href="/boards/brooklyn_{{i}}">Community Board {{i}}</a>
-      {% endfor %}
-
-      <h6 class="dropdown-header">Bronx</h6>
-      {% for i in bronx_boards %}
-      <a class="dropdown-item" href="/boards/bronx_{{i}}">Community Board {{i}}</a>
-      {% endfor %}
-
-      <h6 class="dropdown-header">Manhattan</h6>
-      {% for i in manhattan_boards %}
-      <a class="dropdown-item" href="/boards/manhattan_{{i}}">Community Board {{i}}</a>
-      {% endfor %}
-
-      <h6 class="dropdown-header">Queens</h6>
-      {% for i in queens_boards %}
-      <a class="dropdown-item" href="/boards/queens_{{i}}">Community Board {{i}}</a>
-      {% endfor %}
-
-      <h6 class="dropdown-header">Staten Island</h6>
-      {% for i in staten_island_boards %}
-      <a class="dropdown-item" href="/boards/staten_island_{{i}}">Community Board {{i}}</a>
-      {% endfor %}
+  <h2>Find your board</h2>
+  {% for board in boards %}
+    <div class="btn-group dropdown">
+      <a class="btn btn-secondary btn-lg dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        {{ board.title }}:
+      </a>
+      
+      <div class="dropdown-menu pre-scrollable" aria-labelledby="dropdownMenuLink">
+        {% for i in board.boards %}
+        <a class="dropdown-item" href="/boards/{{board.slug}}_{{i}}">Community Board {{i}}</a>
+        {% endfor %}
+      </div>
     </div>
-  </div>
+   {% endfor %}
 
   <div class="pt-3">
     Unsure of your community board?
