--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -5,12 +5,18 @@
 {% bootstrap_messages %}
 
 <div class="container">
-  <h1>Board Dash</h1>
+  <h1 class="display-1 text-center">Board Dash</h1>
+  <p class="lead text-center">Bringing smart city data to the community.</p>
+
+  <p>Board Dash allows users to learn about their local community board, view what local leaders are doing, and explore civic data sources around trending issues. Our goal is to present relevant local information that informs future decisions and inspires people to get involved in their community.
+
+  <h2>What is a Community Board?</h2>
+  <p>Community Boards are an official municipal organization whose mission is to advise elected officials and government agencies on matters affecting the social welfare of the district. Boards have 50 volunteer Community members and there are 59 Community Boards across the five Boroughs.</p>
 
   <h2>Find your board</h2>
   {% for board in boards %}
     <div class="btn-group dropdown">
-      <a class="btn btn-secondary btn-lg dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <a class="btn btn-primary btn-lg dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         {{ board.title }}:
       </a>
       
@@ -22,8 +28,18 @@
     </div>
    {% endfor %}
 
-  <div class="pt-3">
+  <p>
     Unsure of your community board?
     <a href="https://communityprofiles.planning.nyc.gov">Look it up here</a>
-  </div>
+  </p>
+
+  <h2>Who Made This?</h2>
+  <p>
+    This is an
+    <a href="https://github.com/Intersection/boarddash" rel="noopener noreferrer" target="_blank">open source project</a>
+    by
+    <a href="https://intersection.com" rel="noopener noreferrer" target="_blank">Intersection</a>.
+    Our goal is to use technology to make cities people for people. We do this through transit and civic projects including <a href="https://www.link.nyc/" rel="noopener noreferrer" target="_blank">LinkNYC</a>.
+    Feel free to add to this and make improvements that help the city.
+  </p>
 </div>
