--- a/home/templates/board_detail.html
+++ b/home/templates/board_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Boarddash | {{community_board.name}}{% endblock %}
+{% block title %}Board Dash | {{community_board.name}}{% endblock %}
 
 {% block content %}
 <div class="container">
