--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>{% block title %}Boarddash{% endblock %}</title>
+    <title>{% block title %}Board Dash{% endblock %}</title>
     {% load bootstrap4 %}
 
 {% bootstrap_css %}
